# pyihw

./: .gitignore  CITATION.cff  LICENSE  README.md  README.qmd  pyproject.toml
docs/plans/: 2026-03-04-ihw-design.md  2026-03-04-ihw-implementation.md
examples/st002183/: README.md
src/pyihw/: __init__.py  _types.py  ihw.py  splitting.py  utils.py  weighting.py
src/pyihw/data/: __init__.py  airway.csv
tests/: conftest.py  test_ihw.py  test_splitting.py  test_types.py  test_utils.py  test_weighting.py
tests/data/: r_groups_single_fold.csv  r_reference.csv  r_weight_matrix.csv
