[project]
name = "pyihw"
version = "0.2.0"
description = "Independent Hypothesis Weighting for large-scale multiple testing"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Chiraag Gohel", email = "37530396+chi-raag@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
